--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Webpage
     </title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <img src="https://avatars.githubusercontent.com/u/70193079?v=4">
