--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <html>
   <head>
-    <title>Webpage
-    </title>
+    <title>Mulearn Webpage</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <h1>Hello, Ann Tressa Here!!!</h1>
     <img src="https://avatars.githubusercontent.com/u/70193079?v=4">
-    <h1>Hello</h1>
     Hello there, awesome person!
     <ol>
-    <li>This</li>
-    <li>Is an</li>
-    <li>Ordered list</li>
-      <li><a href="https://github.com">This is a link to GitHub!</a></li>
-      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
-</ol>
-<ul>
-    <li>This</li>
-    <li>Is an</li>
-    <li>Unordered list</li>
-</ul>
+    <li>
+      ::marker
+      <a href="https://github.com">This is a link to GitHub!
+      ::after
+      </a>
+      </li>
+    </ol>
+    ::after
   </body>
 </html>
